add tests rest of code
